force-app/main/default/objects/CrefazCustomSettings__c/CrefazCustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Crefaz Custom Settings</label>
</CustomObject>