force-app/main/default/objects/CrefazCustomSettings__c/fields/BaseEndpoint__c.field-meta.xml
<CustomField>
    <fullName>BaseEndpoint__c</fullName>
    <label>BaseEndpoint</label>
    <type>Url</type>
</CustomField>