force-app/main/default/objects/CrefazCustomSettings__c/fields/ClientIdGenerateToken__c.field-meta.xml
<CustomField>
    <fullName>ClientIdGenerateToken__c</fullName>
    <label>ClientIdGenerateToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>