force-app/main/default/objects/CrefazCustomSettings__c/fields/ClientIdSSO__c.field-meta.xml
<CustomField>
    <fullName>ClientIdSSO__c</fullName>
    <label>ClientIdSSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>