force-app/main/default/objects/CrefazCustomSettings__c/fields/ClientSecretGenerateToken__c.field-meta.xml
<CustomField>
    <fullName>ClientSecretGenerateToken__c</fullName>
    <label>ClientSecretGenerateToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>