force-app/main/default/objects/CrefazCustomSettings__c/fields/ClientSecretSSO__c.field-meta.xml
<CustomField>
    <fullName>ClientSecretSSO__c</fullName>
    <label>ClientSecretSSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>