force-app/main/default/objects/CrefazCustomSettings__c/fields/ConcatenateUsername__c.field-meta.xml
<CustomField>
    <fullName>ConcatenateUsername__c</fullName>
    <label>ConcatenateUsername</label>
    <length>255</length>
    <type>Text</type>
</CustomField>