force-app/main/default/objects/CrefazCustomSettings__c/fields/DatacobAuthorization__c.field-meta.xml
<CustomField>
    <fullName>DatacobAuthorization__c</fullName>
    <label>DatacobAuthorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>