force-app/main/default/objects/CrefazCustomSettings__c/fields/GrantTypeGenerateToken__c.field-meta.xml
<CustomField>
    <fullName>GrantTypeGenerateToken__c</fullName>
    <label>GrantTypeGenerateToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>