force-app/main/default/objects/CrefazCustomSettings__c/fields/PasswordRbm__c.field-meta.xml
<CustomField>
    <fullName>PasswordRbm__c</fullName>
    <externalId>true</externalId>
    <label>PasswordRbm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>