force-app/main/default/objects/CrefazCustomSettings__c/fields/SingleSignOnGroupMember__c.field-meta.xml
<CustomField>
    <fullName>SingleSignOnGroupMember__c</fullName>
    <label>SingleSignOnGroupMember</label>
    <length>255</length>
    <type>Text</type>
</CustomField>