force-app/main/default/objects/CrefazCustomSettings__c/fields/TokenIntegrationCrefazOn__c.field-meta.xml
<CustomField>
    <fullName>TokenIntegrationCrefazOn__c</fullName>
    <externalId>true</externalId>
    <label>TokenIntegrationCrefazOn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>