force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlCalculateTrade__c.field-meta.xml
<CustomField>
    <fullName>UrlCalculateTrade__c</fullName>
    <label>UrlCalculateTrade</label>
    <type>Url</type>
</CustomField>