force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlCase__c.field-meta.xml
<CustomField>
    <fullName>UrlCase__c</fullName>
    <label>UrlCase</label>
    <type>Url</type>
</CustomField>