force-app/main/default/objects/CrefazCustomSettings__c/fields/URLClaim__c.field-meta.xml
<CustomField>
    <fullName>URLClaim__c</fullName>
    <label>URLClaim</label>
    <type>Url</type>
</CustomField>