force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlConsultAlerts__c.field-meta.xml
<CustomField>
    <fullName>UrlConsultAlerts__c</fullName>
    <label>UrlConsultAlerts</label>
    <type>Url</type>
</CustomField>