force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlConsultDebt__c.field-meta.xml
<CustomField>
    <fullName>UrlConsultDebt__c</fullName>
    <label>UrlConsultDebt</label>
    <type>Url</type>
</CustomField>