force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlConsultOccurrences__c.field-meta.xml
<CustomField>
    <fullName>UrlConsultOccurrences__c</fullName>
    <label>UrlConsultOccurrences</label>
    <type>Url</type>
</CustomField>