force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlConsultOcurrences__c.field-meta.xml
<CustomField>
    <fullName>UrlConsultOcurrences__c</fullName>
    <label>UrlConsultOcurrences</label>
    <type>Url</type>
</CustomField>