force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlConsultPayment__c.field-meta.xml
<CustomField>
    <fullName>UrlConsultPayment__c</fullName>
    <label>UrlConsultPayment</label>
    <type>Url</type>
</CustomField>