force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlContract__c.field-meta.xml
<CustomField>
    <fullName>UrlContract__c</fullName>
    <label>UrlContract</label>
    <type>Url</type>
</CustomField>