force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlDatacob__c.field-meta.xml
<CustomField>
    <fullName>UrlDatacob__c</fullName>
    <label>UrlDatacob</label>
    <type>Url</type>
</CustomField>