force-app/main/default/objects/CrefazCustomSettings__c/fields/URLGenerateToken__c.field-meta.xml
<CustomField>
    <fullName>URLGenerateToken__c</fullName>
    <label>URLGenerateToken</label>
    <type>Url</type>
</CustomField>