force-app/main/default/objects/CrefazCustomSettings__c/fields/URLgrantTypeSSO__c.field-meta.xml
<CustomField>
    <fullName>URLgrantTypeSSO__c</fullName>
    <label>URLgrantTypeSSO</label>
    <type>Url</type>
</CustomField>