force-app/main/default/objects/CrefazCustomSettings__c/fields/URLIntegrationCrefazOnLead__c.field-meta.xml
<CustomField>
    <fullName>URLIntegrationCrefazOnLead__c</fullName>
    <label>URLIntegrationCrefazOnLead</label>
    <type>Url</type>
</CustomField>