force-app/main/default/objects/CrefazCustomSettings__c/fields/URLIntegrationCrefazOnOpp__c.field-meta.xml
<CustomField>
    <fullName>URLIntegrationCrefazOnOpp__c</fullName>
    <label>URLIntegrationCrefazOnOpp</label>
    <type>Url</type>
</CustomField>