force-app/main/default/objects/CrefazCustomSettings__c/fields/URLIntegrationQuarantineLead__c.field-meta.xml
<CustomField>
    <fullName>URLIntegrationQuarantineLead__c</fullName>
    <label>URLIntegrationQuarantineLead</label>
    <type>Url</type>
</CustomField>