force-app/main/default/objects/CrefazCustomSettings__c/fields/URLIntegrationQuarantineOpp__c.field-meta.xml
<CustomField>
    <fullName>URLIntegrationQuarantineOpp__c</fullName>
    <label>URLIntegrationQuarantineOpp</label>
    <type>Url</type>
</CustomField>