force-app/main/default/objects/CrefazCustomSettings__c/fields/URLListLead__c.field-meta.xml
<CustomField>
    <fullName>URLListLead__c</fullName>
    <label>URLListLead</label>
    <type>Url</type>
</CustomField>