force-app/main/default/objects/CrefazCustomSettings__c/fields/URLListOpp__c.field-meta.xml
<CustomField>
    <fullName>URLListOpp__c</fullName>
    <label>URLListOpp</label>
    <type>Url</type>
</CustomField>