force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlLogin__c.field-meta.xml
<CustomField>
    <fullName>UrlLogin__c</fullName>
    <label>UrlLogin</label>
    <type>Url</type>
</CustomField>