force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlLoginParcelRbm__c.field-meta.xml
<CustomField>
    <fullName>UrlLoginParcelRbm__c</fullName>
    <label>UrlLoginParcelRbm</label>
    <type>Url</type>
</CustomField>