force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlLoginRbm__c.field-meta.xml
<CustomField>
    <fullName>UrlLoginRbm__c</fullName>
    <label>UrlLoginRbm</label>
    <type>Url</type>
</CustomField>