force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlNotificationAPI__c.field-meta.xml
<CustomField>
    <fullName>UrlNotificationAPI__c</fullName>
    <label>UrlNotificationAPI</label>
    <type>Url</type>
</CustomField>