force-app/main/default/objects/CrefazCustomSettings__c/fields/URLQualificationEngineLead__c.field-meta.xml
<CustomField>
    <fullName>URLQualificationEngineLead__c</fullName>
    <label>URLQualificationEngineLead</label>
    <type>Url</type>
</CustomField>