force-app/main/default/objects/CrefazCustomSettings__c/fields/URLQueryRequestLead__c.field-meta.xml
<CustomField>
    <fullName>URLQueryRequestLead__c</fullName>
    <label>URLQueryRequestLead</label>
    <type>Url</type>
</CustomField>