force-app/main/default/objects/CrefazCustomSettings__c/fields/URLQueryRequestOpp__c.field-meta.xml
<CustomField>
    <fullName>URLQueryRequestOpp__c</fullName>
    <label>URLQueryRequestOpp</label>
    <type>Url</type>
</CustomField>