force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlRedirectOpp__c.field-meta.xml
<CustomField>
    <fullName>UrlRedirectOpp__c</fullName>
    <label>UrlRedirectOpp</label>
    <type>Url</type>
</CustomField>