force-app/main/default/objects/CrefazCustomSettings__c/fields/URLscopeSSO__c.field-meta.xml
<CustomField>
    <fullName>URLscopeSSO__c</fullName>
    <label>URLscopeSSO</label>
    <type>Url</type>
</CustomField>