force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlSendToQuarantine__c.field-meta.xml
<CustomField>
    <fullName>UrlSendToQuarantine__c</fullName>
    <label>UrlSendToQuarantine</label>
    <type>Url</type>
</CustomField>