force-app/main/default/objects/CrefazCustomSettings__c/fields/URLtenantIdSSO__c.field-meta.xml
<CustomField>
    <fullName>URLtenantIdSSO__c</fullName>
    <label>URLtenantIdSSO</label>
    <type>Url</type>
</CustomField>