force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlTicketDownload__c.field-meta.xml
<CustomField>
    <fullName>UrlTicketDownload__c</fullName>
    <label>UrlTicketDownload</label>
    <type>Url</type>
</CustomField>