force-app/main/default/objects/CrefazCustomSettings__c/fields/UrlTicketGenerate__c.field-meta.xml
<CustomField>
    <fullName>UrlTicketGenerate__c</fullName>
    <label>UrlTicketGenerate</label>
    <type>Url</type>
</CustomField>